--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <title>Tarun Gupta - Freelance</title>
   <meta name="author" content="Tarun Gupta" />
   <meta name="description"
-    content="Hire Tarun Gupta, a skilled freelance full-stack developer specializing in React, Node.js, TypeScript, and modern web technologies. 5+ happy clients, fast delivery, and quality code. Start your project today!" />
+    content="Senior Full-Stack Developer specializing in high-performance frontend development with React and Next.js. Expert in building scalable, SEO-friendly web applications, custom UI/UX, and robust Node.js backends. Hire Tarun Gupta for professional freelance web development." />
   <meta name="keywords"
-    content="freelance developer, full-stack developer, React developer, Node.js developer, TypeScript, web development, frontend developer, backend developer, JavaScript, Next.js, Express.js, Firebase, MongoDB, AWS, freelance web developer, hire developer, remote developer" />
+    content="React developer, Next.js specialist, Full-stack developer, Frontend engineer, TypeScript expert, Node.js development, Freelance web developer, UI/UX design, Web performance optimization, Custom web applications, SaaS developer, Tarun Gupta, Software Engineer, Remote developer" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
   <meta name="revisit-after" content="7 days" />
@@ -30,9 +30,9 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.maybetarun.in/" />
-  <meta property="og:title" content="Tarun Gupta - Freelance Full-Stack Developer" />
+  <meta property="og:title" content="Tarun Gupta | Full-Stack Developer | React & Next.js Specialist" />
   <meta property="og:description"
-    content="Hire a skilled freelance full-stack developer specializing in React, Node.js, and modern web technologies. Fast delivery, quality code, 5+ happy clients." />
+    content="Senior Full-Stack Developer specializing in React and Next.js. Building scalable, high-performance web applications with clean code and modern UI/UX. View my portfolio and projects." />
   <meta property="og:image" content="https://www.maybetarun.in/banner.png" />
   <meta property="og:site_name" content="Tarun Gupta Portfolio" />
   <meta property="og:locale" content="en_US" />
@@ -40,9 +40,9 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.maybetarun.in/" />
-  <meta property="twitter:title" content="Tarun Gupta - Freelance Full-Stack Developer" />
+  <meta property="twitter:title" content="Tarun Gupta | Full-Stack Developer | React & Next.js Specialist" />
   <meta property="twitter:description"
-    content="Hire a skilled freelance full-stack developer specializing in React, Node.js, and modern web technologies. Fast delivery, quality code, 5+ happy clients." />
+    content="Senior Full-Stack Developer specializing in React and Next.js. Building scalable, high-performance web applications. Open for freelance opportunities." />
   <meta property="twitter:image" content="https://www.maybetarun.in/banner.png" />
 
   <!-- Additional SEO Meta Tags -->
@@ -77,12 +77,12 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Tarun Gupta",
-      "jobTitle": "Freelance Full-Stack Developer",
-      "description": "Skilled freelance full-stack developer specializing in React, Node.js, TypeScript, and modern web technologies",
+      "jobTitle": "Frontend Engineer",
+      "description": "Expert Full-Stack Developer specializing in high-performance React and Next.js frontend development, TypeScript, and scalable Node.js architectures.",
       "url": "https://www.maybetarun.in",
       "email": "tarun234.tg@gmail.com",
       "sameAs": [
-        "https://github.com/tarungupta",
+        "https://github.com/maybetarun",
         "https://linkedin.com/in/maybetarun",
         "https://twitter.com/maybetarun"
       ],
@@ -127,7 +127,7 @@
           "@type": "Country",
           "name": "Remote"
         },
-        "skills": "React, Node.js, TypeScript, JavaScript, Web Development"
+        "skills": "React, Next.js, Node.js, TypeScript, JavaScript, Web Performance Optimization, Full-Stack Development"
       }
     }
     </script>
