some fixes and 404 page added

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
   <meta name="msapplication-starturl" content="/" />
 
   <!-- Security Headers -->
-  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <!-- <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta http-equiv="X-Frame-Options" content="DENY" />
   <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
-  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" /> -->
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.maybetarun.in/" />
